style: format alembic migration files with consistent double quotes and line spacing

--- a/notebooks/RAG-adhoc.ipynb
+++ b/notebooks/RAG-adhoc.ipynb
@@ -34,9 +34,9 @@
     "sys.path.append(\"..\")\n",
     "from evalap.utils import log_and_raise_for_status\n",
     "\n",
-    "#EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
+    "# EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
     "EVALAP_API_URL = \"https://evalap.etalab.gouv.fr/v1\"\n",
-    "EVALAP_API_KEY = os.getenv(\"EVALAP_API_KEY\") \n",
+    "EVALAP_API_KEY = os.getenv(\"EVALAP_API_KEY\")\n",
     "ALBERT_API_URL = \"https://albert.api.etalab.gouv.fr/v1\"\n",
     "ALBERT_API_KEY = os.getenv(\"ALBERT_API_KEY\")\n",
     "OPENAI_URL = \"https://api.openai.com/v1\"\n",
@@ -59,7 +59,7 @@
     ")\n",
     "response.raise_for_status()\n",
     "dataset = response.json()\n",
-    "dataset_df =  pd.read_json(StringIO(dataset[\"df\"]))"
+    "dataset_df = pd.read_json(StringIO(dataset[\"df\"]))"
    ]
   },
   {
@@ -109,6 +109,7 @@
     "{% endfor %}\n",
     "\"\"\")\n",
     "\n",
+    "\n",
     "# Augment a prompt with collection search\n",
     "def do_rag(query, limit=limit):\n",
     "    # Search relevant chunks\n",
@@ -123,12 +124,13 @@
     "    # Render prompt\n",
     "    return rag_prompt.render(query=query, chunks=hits, limit=limit)\n",
     "\n",
+    "\n",
     "# The LLM core generation\n",
     "def generate(model, prompt, use_system_prompt=True):\n",
     "    messages = [{\"role\": \"user\", \"content\": prompt}]\n",
     "    if use_system_prompt:\n",
     "        messages = [{\"role\": \"system\", \"content\": system_prompt}] + messages\n",
-    "        \n",
+    "\n",
     "    aiclient = LlmClient()\n",
     "    result = aiclient.generate(model=model, messages=messages, **sampling_params)\n",
     "    observation = result.choices[0].message.content\n",
@@ -207,7 +209,11 @@
     "# --\n",
     "\n",
     "# The models to runs\n",
-    "models = [\"AgentPublic/llama3-instruct-guillaumetell\", \"meta-llama/Llama-3.1-8B-Instruct\", \"mistralai/Mistral-Small-3.1-24B-Instruct-2503\"]\n",
+    "models = [\n",
+    "    \"AgentPublic/llama3-instruct-guillaumetell\",\n",
+    "    \"meta-llama/Llama-3.1-8B-Instruct\",\n",
+    "    \"mistralai/Mistral-Small-3.1-24B-Instruct-2503\",\n",
+    "]\n",
     "\n",
     "# the input prompts to answer\n",
     "prompts = []\n",
@@ -288,7 +294,7 @@
     "resp = response.json()\n",
     "if \"id\" in resp:\n",
     "    expset_id = resp[\"id\"]\n",
-    "    print(f'Created expset: {resp[\"name\"]} ({resp[\"id\"]})')\n",
+    "    print(f\"Created expset: {resp['name']} ({resp['id']})\")\n",
     "else:\n",
     "    print(resp)"
    ]
