--- a/notebooks/run_set_ragmetrics_demo.ipynb
+++ b/notebooks/run_set_ragmetrics_demo.ipynb
@@ -31,9 +31,9 @@
     "sys.path.append(\"..\")\n",
     "from evalap.utils import log_and_raise_for_status\n",
     "\n",
-    "#EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
+    "# EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
     "EVALAP_API_URL = \"https://evalap.etalab.gouv.fr/v1\"\n",
-    "EVALAP_API_KEY = os.getenv(\"EVALAP_API_KEY\") \n",
+    "EVALAP_API_KEY = os.getenv(\"EVALAP_API_KEY\")\n",
     "ALBERT_API_URL = \"https://albert.api.staging.etalab.gouv.fr/v1\"\n",
     "ALBERT_API_KEY = os.getenv(\"ALBERT_API_KEY\")\n",
     "MFS_API_URL = \"https://franceservices.etalab.gouv.fr/api/v1\"\n",
@@ -51,25 +51,28 @@
     "# Various utility functions\n",
     "# --\n",
     "def format_metrics(row):\n",
-    "   # format a dataframe has a series of \"mean ± std\"\n",
-    "   metrics = {}\n",
-    "   for metric in final_df.columns.levels[0]:\n",
-    "       mean_value = row[(metric, 'mean')]\n",
-    "       std_value = row[(metric, 'std')]\n",
-    "       metrics[metric] = f\"{mean_value:.2f} ± {std_value:.2f}\"\n",
-    "   return pd.Series(metrics)\n",
-    "    \n",
+    "    # format a dataframe has a series of \"mean ± std\"\n",
+    "    metrics = {}\n",
+    "    for metric in final_df.columns.levels[0]:\n",
+    "        mean_value = row[(metric, \"mean\")]\n",
+    "        std_value = row[(metric, \"std\")]\n",
+    "        metrics[metric] = f\"{mean_value:.2f} ± {std_value:.2f}\"\n",
+    "    return pd.Series(metrics)\n",
+    "\n",
+    "\n",
     "def highlight_cells(s):\n",
-    " # Custom function to highlight the entry with the highest/lowest mean value\n",
-    "    means = s.apply(lambda x: float(x.split('±')[0].strip()))\n",
+    "    # Custom function to highlight the entry with the highest/lowest mean value\n",
+    "    means = s.apply(lambda x: float(x.split(\"±\")[0].strip()))\n",
     "    # Create a mask where 1 for max, 0 for min\n",
     "    max_mean_index = means.idxmax()\n",
-    "    min_mean_index = means.idxmin()  \n",
+    "    min_mean_index = means.idxmin()\n",
     "    mask = pd.Series({max_mean_index: 1, min_mean_index: 0}, index=s.index)\n",
     "    return [\n",
-    "        'font-weight: bold; color: salmon' if mask_value == 0 else\n",
-    "        'font-weight: bold; color: green' if mask_value == 1 else\n",
-    "        ''\n",
+    "        \"font-weight: bold; color: salmon\"\n",
+    "        if mask_value == 0\n",
+    "        else \"font-weight: bold; color: green\"\n",
+    "        if mask_value == 1\n",
+    "        else \"\"\n",
     "        for mask_value in mask\n",
     "    ]"
    ]
@@ -103,46 +106,47 @@
     "expset_readme = \"Evaluation of baseline models with RAG metrics (retriever_context).\"\n",
     "metrics = [\"contextual_relevancy\", \"contextual_recall\", \"contextual_precision\", \"ragas\"]\n",
     "common_params = {\n",
-    "    \"dataset\" : \"MFS_questions_v01\",\n",
-    "    \"model\": {\n",
-    "        \"extra_params\": {\"rag\": {\"mode\":\"rag\", \"limit\":7}},\n",
-    "        \"sampling_params\" : {\"temperature\": 0.2}\n",
-    "    },\n",
-    "    \"metrics\" : metrics,\n",
+    "    \"dataset\": \"MFS_questions_v01\",\n",
+    "    \"model\": {\"extra_params\": {\"rag\": {\"mode\": \"rag\", \"limit\": 7}}, \"sampling_params\": {\"temperature\": 0.2}},\n",
+    "    \"metrics\": metrics,\n",
     "    \"judge_model\": \"gpt-4o\",\n",
     "}\n",
     "grid_params = {\n",
     "    \"model\": [\n",
     "        {\n",
-    "          \"name\": \"meta-llama/Llama-3.2-3B-Instruct\", \n",
-    "          \"base_url\": MFS_API_URL, \"api_key\": MFS_API_KEY, \n",
+    "            \"name\": \"meta-llama/Llama-3.2-3B-Instruct\",\n",
+    "            \"base_url\": MFS_API_URL,\n",
+    "            \"api_key\": MFS_API_KEY,\n",
     "        },\n",
     "        {\n",
-    "          \"name\": \"google/gemma-2-9b-it\", \n",
-    "          \"base_url\": MFS_API_URL, \"api_key\": MFS_API_KEY, \n",
+    "            \"name\": \"google/gemma-2-9b-it\",\n",
+    "            \"base_url\": MFS_API_URL,\n",
+    "            \"api_key\": MFS_API_KEY,\n",
     "        },\n",
     "        {\n",
-    "          \"name\": \"meta-llama/Llama-3.1-8B-Instruct\", \n",
-    "          \"base_url\": MFS_API_URL, \"api_key\": MFS_API_KEY, \n",
+    "            \"name\": \"meta-llama/Llama-3.1-8B-Instruct\",\n",
+    "            \"base_url\": MFS_API_URL,\n",
+    "            \"api_key\": MFS_API_KEY,\n",
     "        },\n",
     "        {\n",
-    "          \"name\": \"AgentPublic/llama3-instruct-guillaumetell\", \n",
-    "          \"base_url\": MFS_API_URL, \"api_key\": MFS_API_KEY, \n",
-    "        }\n",
+    "            \"name\": \"AgentPublic/llama3-instruct-guillaumetell\",\n",
+    "            \"base_url\": MFS_API_URL,\n",
+    "            \"api_key\": MFS_API_KEY,\n",
+    "        },\n",
     "    ],\n",
     "}\n",
     "\n",
     "# Lauching the experiment set\n",
     "expset = {\n",
-    "    \"name\" : expset_name, \n",
+    "    \"name\": expset_name,\n",
     "    \"readme\": expset_readme,\n",
-    "    \"cv\": {\"common_params\": common_params, \"grid_params\": grid_params, \"repeat\":3}\n",
+    "    \"cv\": {\"common_params\": common_params, \"grid_params\": grid_params, \"repeat\": 3},\n",
     "}\n",
-    "response = requests.post(f'{EVALAP_API_URL}/experiment_set', json=expset, headers=headers)\n",
+    "response = requests.post(f\"{EVALAP_API_URL}/experiment_set\", json=expset, headers=headers)\n",
     "resp = response.json()\n",
     "if \"id\" in resp:\n",
     "    expset_id = resp[\"id\"]\n",
-    "    print(f'Created expset: {resp[\"name\"]} ({resp[\"id\"]})')\n",
+    "    print(f\"Created expset: {resp['name']} ({resp['id']})\")\n",
     "else:\n",
     "    print(resp)"
    ]
@@ -248,18 +252,18 @@
    "source": [
     "# Read results\n",
     "# --\n",
-    "df_all = None # multi-dimensional DataFrame\n",
-    "arr_all = {} # keep references of source array per metric metrics \n",
+    "df_all = None  # multi-dimensional DataFrame\n",
+    "arr_all = {}  # keep references of source array per metric metrics\n",
     "\n",
     "# Fetch results and compute macro metrics (mean, std etc).\n",
     "# --\n",
-    "response = requests.get(f'{EVALAP_API_URL}/experiment_set/{expset_id}', headers=headers)\n",
+    "response = requests.get(f\"{EVALAP_API_URL}/experiment_set/{expset_id}\", headers=headers)\n",
     "expset = response.json()\n",
     "rows = []\n",
     "for i, exp in enumerate(expset[\"experiments\"]):\n",
     "    # Get an experiment result\n",
     "    exp_id = exp[\"id\"]\n",
-    "    response = requests.get(f'{EVALAP_API_URL}/experiment/{exp_id}?with_results=true', headers=headers)\n",
+    "    response = requests.get(f\"{EVALAP_API_URL}/experiment/{exp_id}?with_results=true\", headers=headers)\n",
     "    experiment = response.json()\n",
     "    # experiment[\"name\"] # Name of the experiment\n",
     "    if experiment[\"experiment_status\"] != \"finished\":\n",
@@ -267,38 +271,38 @@
     "    results = experiment[\"results\"]\n",
     "    model = experiment[\"model\"][\"name\"]\n",
     "    if experiment[\"model\"].get(\"extra_params\"):\n",
-    "        if experiment[\"model\"][\"extra_params\"].get(\"rag\") :\n",
-    "            model = experiment[\"model\"]['name'] + \"--rag\"\n",
-    "    \n",
+    "        if experiment[\"model\"][\"extra_params\"].get(\"rag\"):\n",
+    "            model = experiment[\"model\"][\"name\"] + \"--rag\"\n",
+    "\n",
     "    # Add an observation row from the observation_table (mean, std etc)\n",
     "    row = {\"model\": model}\n",
     "    rows.append(row)\n",
     "    metric_arrs = {}\n",
     "    arr_all[model] = metric_arrs\n",
-    "    for metric_results in results: \n",
+    "    for metric_results in results:\n",
     "        metric = metric_results[\"metric_name\"]\n",
     "        arr = np.array([x[\"score\"] for x in metric_results[\"observation_table\"] if pd.notna(x[\"score\"])])\n",
-    "        row[(metric, 'mean')] = np.mean(arr)\n",
-    "        row[(metric, 'std')] = np.std(arr)\n",
-    "        row[(metric, 'median')] = np.median(arr)\n",
-    "        row[(metric, 'mean_std')] = f\"{arr.mean():.2f} ± {arr.std():.2f}\"  # Formatting as 'mean±std'\n",
-    "        row[(metric, 'support')] = len(arr)\n",
+    "        row[(metric, \"mean\")] = np.mean(arr)\n",
+    "        row[(metric, \"std\")] = np.std(arr)\n",
+    "        row[(metric, \"median\")] = np.median(arr)\n",
+    "        row[(metric, \"mean_std\")] = f\"{arr.mean():.2f} ± {arr.std():.2f}\"  # Formatting as 'mean±std'\n",
+    "        row[(metric, \"support\")] = len(arr)\n",
     "        metric_arrs[metric] = arr\n",
-    "    \n",
+    "\n",
     "df_all = pd.DataFrame(rows)\n",
-    "df_all.set_index('model', inplace=True)\n",
+    "df_all.set_index(\"model\", inplace=True)\n",
     "df_all.columns = pd.MultiIndex.from_tuples(df_all.columns)\n",
-    "final_df = df_all.xs('mean', axis=1, level=1) # pick the \"macro\" metric to show (mean, std, support etc)\n",
+    "final_df = df_all.xs(\"mean\", axis=1, level=1)  # pick the \"macro\" metric to show (mean, std, support etc)\n",
     "\n",
     "# Group and average the result of the experiments by models\n",
     "# --\n",
-    "final_df = final_df.groupby(level=0).agg(['mean', 'std'])  # groupby \"model\"\n",
+    "final_df = final_df.groupby(level=0).agg([\"mean\", \"std\"])  # groupby \"model\"\n",
     "final_df.index.name = None\n",
-    "final_df = final_df.apply(format_metrics, axis=1) # final formating\n",
+    "final_df = final_df.apply(format_metrics, axis=1)  # final formating\n",
     "\n",
-    "#final_df = final_df.reindex([m[\"name\"] for m in grid_params[\"model\"]]) # reorder rows\n",
-    "final_df = final_df.sort_values(by='contextual_relevancy', ascending=False)\n",
-    "final_df = final_df[metrics] # reorder columns\n",
+    "# final_df = final_df.reindex([m[\"name\"] for m in grid_params[\"model\"]]) # reorder rows\n",
+    "final_df = final_df.sort_values(by=\"contextual_relevancy\", ascending=False)\n",
+    "final_df = final_df[metrics]  # reorder columns\n",
     "final_df = final_df.style.apply(highlight_cells, axis=0)\n",
     "final_df"
    ]
@@ -314,23 +318,23 @@
     "grid_params = {\n",
     "    \"model\": [\n",
     "        {\n",
-    "          \"name\": \"meta-llama/Llama-3.3-70B-Instruct\", \n",
-    "          \"base_url\": MFS_API_URL, \"api_key\": MFS_API_KEY, \n",
+    "            \"name\": \"meta-llama/Llama-3.3-70B-Instruct\",\n",
+    "            \"base_url\": MFS_API_URL,\n",
+    "            \"api_key\": MFS_API_KEY,\n",
     "        },\n",
     "        {\n",
-    "         \"name\": \"deepseek-ai/DeepSeek-R1-Distill-Qwen-32B\",\n",
-    "          \"base_url\": MFS_API_URL, \"api_key\": MFS_API_KEY, \n",
+    "            \"name\": \"deepseek-ai/DeepSeek-R1-Distill-Qwen-32B\",\n",
+    "            \"base_url\": MFS_API_URL,\n",
+    "            \"api_key\": MFS_API_KEY,\n",
     "        },\n",
     "    ],\n",
     "}\n",
-    "expset = {\n",
-    "    \"cv\": {\"common_params\": common_params, \"grid_params\": grid_params, \"repeat\":3}\n",
-    "}\n",
-    "response = requests.patch(f'{EVALAP_API_URL}/experiment_set/{expset_id}', json=expset, headers=headers)\n",
+    "expset = {\"cv\": {\"common_params\": common_params, \"grid_params\": grid_params, \"repeat\": 3}}\n",
+    "response = requests.patch(f\"{EVALAP_API_URL}/experiment_set/{expset_id}\", json=expset, headers=headers)\n",
     "resp = response.json()\n",
     "if \"id\" in resp:\n",
     "    expset_id = resp[\"id\"]\n",
-    "    print(f'Created expset: {resp[\"name\"]} ({resp[\"id\"]})')\n",
+    "    print(f\"Created expset: {resp['name']} ({resp['id']})\")\n",
     "else:\n",
     "    print(resp)"
    ]
@@ -396,22 +400,22 @@
     "\n",
     "for model, metrics_arr in arr_all.items():\n",
     "    experiment_title = model\n",
-    "    metrics_arr = {k:metrics_arr[k] for k in metrics} # reorder metrics\n",
-    "    # Pad missing value with np.nan\n",
+    "    metrics_arr = {k: metrics_arr[k] for k in metrics}  # reorder metrics\n",
+    "    # Pad missing value with np.nan\n",
     "    arrays = list(metrics_arr.values())\n",
     "    max_length = max(len(arr) for arr in arrays)\n",
     "    arr_metrics = np.array([np.pad(arr, (0, max_length - len(arr)), constant_values=np.nan) for arr in arrays])\n",
     "    df = pd.DataFrame(arr_metrics.T, columns=metrics_arr.keys())\n",
-    "    \n",
+    "\n",
     "    num_cols = 5\n",
     "    num_plots = len(df.columns)\n",
-    "    num_rows = (num_plots + num_cols - 1) // num_cols  \n",
+    "    num_rows = (num_plots + num_cols - 1) // num_cols\n",
     "    plt.figure(figsize=(num_cols * 4, num_rows * 4))\n",
     "    for i, column in enumerate(df.columns, 1):\n",
     "        plt.subplot(num_rows, num_cols, i)\n",
     "        sns.histplot(df[column], bins=20, stat=\"probability\", element=\"bars\", kde=True)\n",
-    "        plt.ylabel(\"\") \n",
-    "    \n",
+    "        plt.ylabel(\"\")\n",
+    "\n",
     "    plt.suptitle(experiment_title, fontsize=16)\n",
     "    plt.tight_layout()\n",
     "    plt.show()"
@@ -435,9 +439,9 @@
     }
    ],
    "source": [
-    "# RETRY failed experiment !\n",
+    "# RETRY failed experiment !\n",
     "# --\n",
-    "response = requests.post(f'{EVALAP_API_URL}/retry/experiment_set/{expset_id}', headers=headers)\n",
+    "response = requests.post(f\"{EVALAP_API_URL}/retry/experiment_set/{expset_id}\", headers=headers)\n",
     "response.json()"
    ]
   },
@@ -484,7 +488,11 @@
    "source": [
     "# Force Rerun observations/metrics\n",
     "# --\n",
-    "response = requests.patch(f'{EVALAP_API_URL}/experiment/150?with_results=true', headers=headers, json={\"metrics\":metrics, \"rerun_metrics\":True})\n",
+    "response = requests.patch(\n",
+    "    f\"{EVALAP_API_URL}/experiment/150?with_results=true\",\n",
+    "    headers=headers,\n",
+    "    json={\"metrics\": metrics, \"rerun_metrics\": True},\n",
+    ")\n",
     "response.json()"
    ]
   }
