--- a/notebooks/run_toolings.ipynb
+++ b/notebooks/run_toolings.ipynb
@@ -28,9 +28,9 @@
     "sys.path.append(\"..\")\n",
     "from evalap.utils import log_and_raise_for_status\n",
     "\n",
-    "#EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
+    "# EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
     "EVALAP_API_URL = \"https://evalap.etalab.gouv.fr/v1\"\n",
-    "EVALAP_API_KEY = os.getenv(\"EVALAP_API_KEY\") \n",
+    "EVALAP_API_KEY = os.getenv(\"EVALAP_API_KEY\")\n",
     "ALBERT_API_URL = \"https://albert.api.etalab.gouv.fr/v1\"\n",
     "ALBERT_API_KEY = os.getenv(\"ALBERT_API_KEY\")\n",
     "OPENAI_URL = \"https://api.openai.com/v1\"\n",
@@ -60,15 +60,19 @@
     "system_prompt = \"Tu es un agent de l'état Français qui répond en langue française aux questions des usagers des services publiques et citoyens de manière précise, concrète et concise.\"\n",
     "metrics = [\"judge_precision\", \"output_length\", \"generation_time\", \"nb_tool_calls\"]\n",
     "common_params = {\n",
-    "    \"dataset\" : \"MFS_questions_v01\",\n",
-    "    \"model\": {\"sampling_params\" : {\"temperature\": 0.2}, \"system_prompt\": system_prompt},\n",
-    "    \"metrics\" : metrics,\n",
+    "    \"dataset\": \"MFS_questions_v01\",\n",
+    "    \"model\": {\"sampling_params\": {\"temperature\": 0.2}, \"system_prompt\": system_prompt},\n",
+    "    \"metrics\": metrics,\n",
     "    \"judge_model\": \"gpt-4o\",\n",
     "}\n",
     "grid_params = {\n",
     "    \"model\": [\n",
-    "        {\"name\": \"meta-llama/Llama-3.1-8B-Instruct\",                 \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY},\n",
-    "        {\"name\": \"mistralai/Mistral-Small-3.1-24B-Instruct-2503\",    \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY},\n",
+    "        {\"name\": \"meta-llama/Llama-3.1-8B-Instruct\", \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY},\n",
+    "        {\n",
+    "            \"name\": \"mistralai/Mistral-Small-3.1-24B-Instruct-2503\",\n",
+    "            \"base_url\": ALBERT_API_URL,\n",
+    "            \"api_key\": ALBERT_API_KEY,\n",
+    "        },\n",
     "    ],\n",
     "}\n",
     "\n",
@@ -77,26 +81,28 @@
     "# --\n",
     "system_prompt_tool = \"Tu recherche des données précises et à jour en utilisant les outils mis à disposition sur les services publiques français. Réponds de manière précise, conrète et concise.\"\n",
     "tools = [\n",
-    "    #{\"_tools_\": [\"search_albert_collections_v0\"]},\n",
-    "    {\"_tools_\": [\"search_albert_collections_v1\"]}, # tool_choice=required not suported by albert-api atm.\n",
+    "    # {\"_tools_\": [\"search_albert_collections_v0\"]},\n",
+    "    {\"_tools_\": [\"search_albert_collections_v1\"]},  # tool_choice=required not suported by albert-api atm.\n",
     "    {\"_tools_\": [\"search_albert_collections_v2\"]},\n",
     "]\n",
     "for i in range(len(grid_params[\"model\"])):\n",
     "    for extra_params in tools:\n",
     "        model = grid_params[\"model\"][i]\n",
-    "        grid_params[\"model\"].append(model.copy() | {\"extra_params\": extra_params} | {\"system_prompt\": system_prompt_tool})\n",
+    "        grid_params[\"model\"].append(\n",
+    "            model.copy() | {\"extra_params\": extra_params} | {\"system_prompt\": system_prompt_tool}\n",
+    "        )\n",
     "\n",
     "# Lauching the experiment set\n",
     "expset = {\n",
-    "    \"name\" : expset_name, \n",
+    "    \"name\": expset_name,\n",
     "    \"readme\": expset_readme,\n",
-    "    \"cv\": {\"common_params\": common_params, \"grid_params\": grid_params, \"repeat\":4}\n",
+    "    \"cv\": {\"common_params\": common_params, \"grid_params\": grid_params, \"repeat\": 4},\n",
     "}\n",
-    "response = requests.post(f'{EVALAP_API_URL}/experiment_set', json=expset, headers=headers)\n",
+    "response = requests.post(f\"{EVALAP_API_URL}/experiment_set\", json=expset, headers=headers)\n",
     "resp = response.json()\n",
     "if \"id\" in resp:\n",
     "    expset_id = resp[\"id\"]\n",
-    "    print(f'Created expset: {resp[\"name\"]} ({resp[\"id\"]})')\n",
+    "    print(f\"Created expset: {resp['name']} ({resp['id']})\")\n",
     "else:\n",
     "    print(resp)"
    ]
