--- a/notebooks/run_dataset_experiences_demo.ipynb
+++ b/notebooks/run_dataset_experiences_demo.ipynb
@@ -79,7 +79,7 @@
    ],
    "source": [
     "# Show available dataset\n",
-    "response = requests.get(f'{API_URL}/v1/datasets')\n",
+    "response = requests.get(f\"{API_URL}/v1/datasets\")\n",
     "resp = response.json()\n",
     "resp"
    ]
@@ -137,7 +137,7 @@
     "# Show available metrics\n",
     "# - the require fields should be an existing field to the dataset used with the metric.\n",
     "# - output metric can be generated from the query (see below)\n",
-    "response = requests.get(f'{API_URL}/v1/metrics')\n",
+    "response = requests.get(f\"{API_URL}/v1/metrics\")\n",
     "all_metrics = response.json()\n",
     "df = pd.DataFrame(all_metrics).sort_values(by=[\"type\", \"name\"])\n",
     "df = df[df[\"type\"] == \"dataset\"]\n",
@@ -176,17 +176,17 @@
     "# Lauching the experiments\n",
     "experiment_ids = []\n",
     "experiment = {\n",
-    "    \"name\" : f\"MFS_dataset_complexity_analyze\", \n",
+    "    \"name\": f\"MFS_dataset_complexity_analyze\",\n",
     "    \"dataset\": dataset,\n",
     "    \"metrics\": metrics,\n",
     "}\n",
     "\n",
-    "response = requests.post(f'{API_URL}/v1/experiment', json=experiment)\n",
+    "response = requests.post(f\"{API_URL}/v1/experiment\", json=experiment)\n",
     "resp = response.json()\n",
     "\n",
     "if \"id\" in resp:\n",
     "    experiment_ids.append(resp[\"id\"])\n",
-    "    print(f'Created experiment: {resp[\"name\"]} ({resp[\"id\"]}), status: {resp[\"experiment_status\"]}')\n",
+    "    print(f\"Created experiment: {resp['name']} ({resp['id']}), status: {resp['experiment_status']}\")\n",
     "else:\n",
     "    print(resp)"
    ]
@@ -291,19 +291,19 @@
     "import numpy as np\n",
     "import requests\n",
     "\n",
-    "# BASELINE CODE FOR DATASET METRIC \n",
+    "# BASELINE CODE FOR DATASET METRIC\n",
     "observations_dict = {}\n",
     "metric_names = set()\n",
     "\n",
     "experiment_ids = [resp[\"id\"]]\n",
     "\n",
     "for exp_id in experiment_ids:\n",
-    "    response = requests.get(f'{API_URL}/v1/experiment/{exp_id}?with_results=true')\n",
+    "    response = requests.get(f\"{API_URL}/v1/experiment/{exp_id}?with_results=true\")\n",
     "    experiment = response.json()\n",
     "    results = experiment[\"results\"]\n",
-    "    \n",
+    "\n",
     "    model_name = f\"Experiment_{exp_id}\"\n",
-    "    \n",
+    "\n",
     "    for metric_results in results:\n",
     "        metric_name = metric_results[\"metric_name\"]\n",
     "        metric_names.add(metric_name)\n",
@@ -311,20 +311,22 @@
     "            key = (model_name, idx)\n",
     "            if key not in observations_dict:\n",
     "                observations_dict[key] = {\"model\": model_name, \"num_line\": idx}\n",
-    "            \n",
+    "\n",
     "            if metric_name == \"judge_complexity\" and \"observation\" in obs and obs[\"observation\"] is not None:\n",
     "                try:\n",
     "                    observation_data = json.loads(obs[\"observation\"])\n",
     "                    scores = observation_data.get(\"scores\", {})\n",
-    "                    observations_dict[key].update({\n",
-    "                        \"judge_complexity_score\": obs.get(\"score\"),\n",
-    "                        \"thematique\": observation_data.get(\"thematique\", \"\"),\n",
-    "                        \"demande_score\": scores.get(\"demande\", 0),\n",
-    "                        \"administration_score\": scores.get(\"administration\", 0),\n",
-    "                        \"procedure_score\": scores.get(\"procedure\", 0),\n",
-    "                        \"global_score\": scores.get(\"global\", 0),\n",
-    "                        \"answer\": observation_data.get(\"answer\", \"\")\n",
-    "                    })\n",
+    "                    observations_dict[key].update(\n",
+    "                        {\n",
+    "                            \"judge_complexity_score\": obs.get(\"score\"),\n",
+    "                            \"thematique\": observation_data.get(\"thematique\", \"\"),\n",
+    "                            \"demande_score\": scores.get(\"demande\", 0),\n",
+    "                            \"administration_score\": scores.get(\"administration\", 0),\n",
+    "                            \"procedure_score\": scores.get(\"procedure\", 0),\n",
+    "                            \"global_score\": scores.get(\"global\", 0),\n",
+    "                            \"answer\": observation_data.get(\"answer\", \"\"),\n",
+    "                        }\n",
+    "                    )\n",
     "                except json.JSONDecodeError:\n",
     "                    print(f\"Erreur de décodage JSON pour {model_name}, judge_complexity, ligne {idx}\")\n",
     "                except Exception as e:\n",
@@ -337,7 +339,15 @@
     "columns_order = [\"model\", \"num_line\"]\n",
     "metric_columns = list(metric_names - {\"judge_complexity\"})\n",
     "columns_order.extend(metric_columns)\n",
-    "judge_complexity_columns = [\"judge_complexity_score\", \"thematique\", \"demande_score\", \"administration_score\", \"procedure_score\", \"global_score\", \"answer\"]\n",
+    "judge_complexity_columns = [\n",
+    "    \"judge_complexity_score\",\n",
+    "    \"thematique\",\n",
+    "    \"demande_score\",\n",
+    "    \"administration_score\",\n",
+    "    \"procedure_score\",\n",
+    "    \"global_score\",\n",
+    "    \"answer\",\n",
+    "]\n",
     "columns_order.extend([col for col in judge_complexity_columns if col in observations_df.columns])\n",
     "\n",
     "for col in columns_order:\n",
@@ -368,29 +378,24 @@
     "import pandas as pd\n",
     "import plotly.graph_objects as go\n",
     "\n",
+    "\n",
     "def create_scatter_plot(df, var1, var2):\n",
-    "    fig = go.Figure(data=[go.Scatter(\n",
-    "        x=df[var1],\n",
-    "        y=df[var2],\n",
-    "        mode='markers',\n",
-    "        marker=dict(\n",
-    "            size=10,\n",
-    "            color='rgba(152, 0, 0, .8)',\n",
-    "            line=dict(\n",
-    "                width=2,\n",
-    "                color='rgb(0, 0, 0)'\n",
+    "    fig = go.Figure(\n",
+    "        data=[\n",
+    "            go.Scatter(\n",
+    "                x=df[var1],\n",
+    "                y=df[var2],\n",
+    "                mode=\"markers\",\n",
+    "                marker=dict(size=10, color=\"rgba(152, 0, 0, .8)\", line=dict(width=2, color=\"rgb(0, 0, 0)\")),\n",
     "            )\n",
-    "        )\n",
-    "    )])\n",
-    "    \n",
-    "    fig.update_layout(\n",
-    "        title=f'Nuage de points : {var1} vs {var2}',\n",
-    "        xaxis_title=var1,\n",
-    "        yaxis_title=var2,\n",
-    "        showlegend=False\n",
+    "        ]\n",
     "    )\n",
-    "    \n",
-    "    return fig\n"
+    "\n",
+    "    fig.update_layout(\n",
+    "        title=f\"Nuage de points : {var1} vs {var2}\", xaxis_title=var1, yaxis_title=var2, showlegend=False\n",
+    "    )\n",
+    "\n",
+    "    return fig"
    ]
   },
   {
