--- a/notebooks/run_ocr.ipynb
+++ b/notebooks/run_ocr.ipynb
@@ -27,9 +27,9 @@
     "sys.path.append(\"..\")\n",
     "from evalap.utils import log_and_raise_for_status\n",
     "\n",
-    "#EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
+    "# EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
     "EVALAP_API_URL = \"https://evalap.etalab.gouv.fr/v1\"\n",
-    "EVALAP_API_KEY = os.getenv(\"EVALAP_API_KEY\") \n",
+    "EVALAP_API_KEY = os.getenv(\"EVALAP_API_KEY\")\n",
     "ALBERT_API_URL = \"https://albert.api.etalab.gouv.fr/v1\"\n",
     "ALBERT_API_KEY = os.getenv(\"ALBERT_API_KEY\")\n",
     "OPENAI_URL = \"https://api.openai.com/v1\"\n",
@@ -110,17 +110,27 @@
     "# Designing my experiments\n",
     "# --\n",
     "expset_name = \"albert_OCR_v2\"\n",
-    "expset_readme = \"Evaluating OCR capabilities of albert on the marker datasets\" \n",
+    "expset_readme = \"Evaluating OCR capabilities of albert on the marker datasets\"\n",
     "common_params = {\n",
-    "    \"dataset\" : \"OCR_marker_benchmark\",\n",
-    "    \"model\": {\"sampling_params\" : {\"temperature\": 0.2}},\n",
-    "    \"metrics\" : [\"ocr_v1\", \"output_length\", \"generation_time\"],\n",
-    "    \"with_vision\": True  # use parquet dataset\n",
+    "    \"dataset\": \"OCR_marker_benchmark\",\n",
+    "    \"model\": {\"sampling_params\": {\"temperature\": 0.2}},\n",
+    "    \"metrics\": [\"ocr_v1\", \"output_length\", \"generation_time\"],\n",
+    "    \"with_vision\": True,  # use parquet dataset\n",
     "}\n",
     "grid_params = {\n",
     "    \"model\": [\n",
-    "        {\"name\": \"mistralai/Mistral-Small-3.1-24B-Instruct-2503\", \"system_prompt\": system_prompt, \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY},\n",
-    "        {\"name\": \"mistralai/Mistral-Small-3.1-24B-Instruct-2503\", \"prelude_prompt\": system_prompt, \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY},\n",
+    "        {\n",
+    "            \"name\": \"mistralai/Mistral-Small-3.1-24B-Instruct-2503\",\n",
+    "            \"system_prompt\": system_prompt,\n",
+    "            \"base_url\": ALBERT_API_URL,\n",
+    "            \"api_key\": ALBERT_API_KEY,\n",
+    "        },\n",
+    "        {\n",
+    "            \"name\": \"mistralai/Mistral-Small-3.1-24B-Instruct-2503\",\n",
+    "            \"prelude_prompt\": system_prompt,\n",
+    "            \"base_url\": ALBERT_API_URL,\n",
+    "            \"api_key\": ALBERT_API_KEY,\n",
+    "        },\n",
     "    ],\n",
     "}\n",
     "\n",
@@ -128,15 +138,15 @@
     "# Lauching the experiment set\n",
     "# --\n",
     "expset = {\n",
-    "    \"name\" : expset_name, \n",
+    "    \"name\": expset_name,\n",
     "    \"readme\": expset_readme,\n",
-    "    \"cv\": {\"common_params\": common_params, \"grid_params\": grid_params, \"repeat\":1}\n",
+    "    \"cv\": {\"common_params\": common_params, \"grid_params\": grid_params, \"repeat\": 1},\n",
     "}\n",
-    "response = requests.post(f'{EVALAP_API_URL}/experiment_set', json=expset, headers=headers)\n",
+    "response = requests.post(f\"{EVALAP_API_URL}/experiment_set\", json=expset, headers=headers)\n",
     "resp = response.json()\n",
     "if \"id\" in resp:\n",
     "    expset_id = resp[\"id\"]\n",
-    "    print(f'Created expset: {resp[\"name\"]} ({resp[\"id\"]})')\n",
+    "    print(f\"Created expset: {resp['name']} ({resp['id']})\")\n",
     "else:\n",
     "    print(resp)"
    ]
