chore: remove unused imports across codebase

--- a/notebooks/create_marker_dataset.ipynb
+++ b/notebooks/create_marker_dataset.ipynb
@@ -7,15 +7,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os, sys, time, json, re, io\n",
+    "import os\n",
+    "import sys\n",
+    "import json\n",
+    "import re\n",
+    "import io\n",
     "import base64\n",
     "import dotenv\n",
     "import requests\n",
     "import subprocess\n",
-    "import pandas as pd\n",
     "from datasets import load_dataset\n",
     "\n",
-    "from IPython.display import display, HTML\n",
+    "from IPython.display import display\n",
     "from PIL import Image\n",
     "\n",
     "dotenv.load_dotenv(\"../.env\")\n",
