--- a/notebooks/run_dataset_experiences_demo.ipynb
+++ b/notebooks/run_dataset_experiences_demo.ipynb
@@ -20,7 +20,6 @@
    "source": [
     "import os\n",
     "import sys\n",
-    "import time\n",
     "\n",
     "import dotenv\n",
     "from IPython.display import HTML\n",
@@ -30,7 +29,6 @@
     "\n",
     "dotenv.load_dotenv(\"../.env\")\n",
     "sys.path.append(\"..\")\n",
-    "from evalap.utils import log_and_raise_for_status\n",
     "\n",
     "API_URL = \"http://localhost:8000\"\n",
     "ALBERT_API_URL = \"https://albert.api.etalab.gouv.fr/v1\"\n",
@@ -176,7 +174,7 @@
     "# Lauching the experiments\n",
     "experiment_ids = []\n",
     "experiment = {\n",
-    "    \"name\": f\"MFS_dataset_complexity_analyze\",\n",
+    "    \"name\": \"MFS_dataset_complexity_analyze\",\n",
     "    \"dataset\": dataset,\n",
     "    \"metrics\": metrics,\n",
     "}\n",
@@ -288,7 +286,6 @@
    "source": [
     "import json\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
     "import requests\n",
     "\n",
     "# BASELINE CODE FOR DATASET METRIC\n",
@@ -376,7 +373,6 @@
    "source": [
     "import plotly.graph_objects as go\n",
     "import pandas as pd\n",
-    "import plotly.graph_objects as go\n",
     "\n",
     "\n",
     "def create_scatter_plot(df, var1, var2):\n",
