--- a/notebooks/run_ocr.ipynb
+++ b/notebooks/run_ocr.ipynb
@@ -16,16 +16,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os, sys, time, json\n",
+    "import os\n",
+    "import sys\n",
     "import dotenv\n",
-    "from IPython.display import HTML\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
     "import requests\n",
     "\n",
     "dotenv.load_dotenv(\"../.env\")\n",
     "sys.path.append(\"..\")\n",
-    "from evalap.utils import log_and_raise_for_status\n",
     "\n",
     "# EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
     "EVALAP_API_URL = \"https://evalap.etalab.gouv.fr/v1\"\n",
