style: replace equality checks with 'is None' and add __all__ exports for module interfaces

--- a/notebooks/create_marker_dataset.ipynb
+++ b/notebooks/create_marker_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "afd82f64-6a10-4aeb-af51-69046db4ac88",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
     "\n",
     "dotenv.load_dotenv(\"../.env\")\n",
     "sys.path.append(\"..\")\n",
-    "from evalap.utils import log_and_raise_for_status\n",
+    "from evalap.utils import log_and_raise_for_status  # noqa: E402\n",
     "\n",
     "# EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
     "EVALAP_API_URL = \"https://evalap.etalab.gouv.fr/v1\"\n",
@@ -254,18 +254,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "34c76c88-da7e-4841-973b-585d1240a912",
    "metadata": {},
    "outputs": [],
    "source": [
-    "system_prompt = \"\"\"You are tasked with generating a JSON representation from the analysis (OCR) of a given image. \n",
-    "Your goal is to create a JSON object that has the content of the image extracted in a structured format. \n",
+    "system_prompt = \"\"\"You are tasked with generating a JSON representation from the analysis (OCR) of a given image.\n",
+    "Your goal is to create a JSON object that has the content of the image extracted in a structured format.\n",
     "\n",
     "The JSON should be structured to represent the content of the image in a way that corresponds to standard markdown primitives. Here's how to approach this task:\n",
     "\n",
     "The JSON should contain a list of blocks, where each block represents a distinct element in the image, such as headers, paragraphs, or tables.\n",
-    "Here is a an exemple of the json schema wanted: \n",
+    "Here is a an exemple of the json schema wanted:\n",
     "\n",
     "Schema:\n",
     "```json\n",
