style: standardize import sorting across all Python files

--- a/notebooks/RAG-adhoc.ipynb
+++ b/notebooks/RAG-adhoc.ipynb
@@ -17,10 +17,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import concurrent.futures\n",
     "import os\n",
     "import sys\n",
     "from io import StringIO\n",
-    "import concurrent.futures\n",
     "\n",
     "import dotenv\n",
     "import pandas as pd\n",
@@ -74,8 +74,8 @@
    ],
    "source": [
     "sys.path.append(\"../../mcp-servers/data-gouv-fr/\")\n",
-    "from clients.search import SearchEngineClient\n",
-    "from clients.llm import LlmClient, split_think_answer"
+    "from clients.llm import LlmClient, split_think_answer\n",
+    "from clients.search import SearchEngineClient"
    ]
   },
   {
